@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 18:27:14 brook Exp $
+
+SHA1 (R/ini_0.3.1.tar.gz) = cc49954e453cf4fc5edc59b7f2fecc5979979700
+RMD160 (R/ini_0.3.1.tar.gz) = fa56a3d7e29a8ab7596a1b570141df3d4b0d6bb9
+SHA512 (R/ini_0.3.1.tar.gz) = cf49caa1baa6e4cba595b706a66493459267b4b9fe87e4c21d67d3c56baf060144e1e4e99bbcc106130da0a5061c1718a2dd2774f168278165141948cd4145a3
+Size (R/ini_0.3.1.tar.gz) = 3488 bytes
